--- a/halo/review.html
+++ b/halo/review.html
@@ -14,25 +14,7 @@
     <title>HALO Đánh giá</title>
   </head>
   <body>
-    <!-- Load Facebook SDK for JavaScript-->
-    <div id="fb-root"></div>
-    <script>
-      window.fbAsyncInit = function() {
-      FB.init({
-      xfbml            : true,
-      version          : 'v10.0'
-      });
-      };
-      (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <!-- Your Chat Plugin code-->
-    <div class="fb-customerchat" attribution="setup_tool" page_id="103550388473714" theme_color="#6699cc" logged_in_greeting="Xin chào, HALO có thể giúp gì cho bạn?" logged_out_greeting="Xin chào, HALO có thể giúp gì cho bạn?"></div>
+    <!--include fb-chat.pug-->
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
@@ -111,21 +93,34 @@
       </div>
       <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
       <section class="display-till-md">
-        <div class="carousel slide" id="sub-banner-area--min" data-ride="carousel" data-touch="true">
+        <div class="carousel slide" id="sub-banner-area--min" data-ride="carousel" data-touch="true" data-interval="false">
           <ul class="carousel-indicators">
             <li class="active" data-target="#sub-banner-area--min" data-slide-to="0"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="1"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="2"></li>
+            <li data-target="#sub-banner-area--min" data-slide-to="3"></li>
           </ul>
-          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-big-banner-max-v7.jpg" alt="">
+          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-sub-banner-2.jpg" alt="">
               <div class="carousel-caption">
-                <h3>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</h3>
-                <p>Mối tình đầu với team "viền đỏ"</p>
-              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-3.png" alt=""><span class="easter-egg">Sigma 17-50mm Review </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-4.jpg" alt=""></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+                <h3>Một ngày cùng Canon 35mm f/1.4&nbsp;L</h3>
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-3.png" alt="">
+              <div class="carousel-caption">
+                <h3>Sigma 17-50mm&nbsp;Review </h3>
+              </div><span class="easter-egg"> </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-4.jpg" alt="">
+              <div class="carousel-caption">
+                <h3>Canon 85mm Review         </h3>
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-5.png" alt="">
+              <div class="carousel-caption">
+                <h3>Canon 60D Review       </h3>
+              </div></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
-      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><span>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</span><span>Mối tình đầu với team "viền đỏ"</span></a>
-        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-3.png" alt=""><span class="easter-egg">Sigma 17-50mm Review </span></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-4.jpg" alt=""><span class="easter-egg">Canon 85mm Review </span></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-5.png" alt=""><span class="easter-egg">Canon 60D Review </span></a></div>
+      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><img class="display-till-xl" src="/halo/img/img--review/review-big-banner-md-v1.jpg" alt=""><img class="hidden-till-xl" src="/halo/img/img--review/review-big-banner-xl-v7.jpg" alt="">
+          <div class="sub-banner__caption"><span>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</span><br><span>Mối tình đầu với team "viền đỏ"</span></div></a>
+        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-3.png" alt="">
+            <div class="sub-banner__caption"><span>Sigma 17-50mm Review </span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-4.jpg" alt="">
+            <div class="sub-banner__caption"><span>Canon 85mm Review </span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-5.png" alt="">
+            <div class="sub-banner__caption"><span>Canon 60D Review </span></div></a></div>
       </section>
       <section class="main-area container-xl">
         <div class="review__post-area">
@@ -168,7 +163,7 @@
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Chính sách</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Liên hệ</a></li>
         </ul>
-        <p class="footer__info">Địa chỉ: Số Math.pow(n+1, 2), phố “ABC”, Hà Nội <br>Tổng đài tư vấn mua hàng: 099.999.9999<br>Email: info@halo.vn<br>ĐKKD số 0123456789 do Sở Kế hoạch và Đầu tư TP. Hà Nội cấp ngày 01/01/2021</p>
+        <p class="footer__info">Địa chỉ: Tầng 12A, tòa nhà Viwaseen Tower, số 48, Tố Hữu, Hà Nội<br>Tổng đài tư vấn mua hàng: 099.999.9999<br>Email: info@halo.vn<br>ĐKKD số 0123456789 do Sở Kế hoạch và Đầu tư TP. Hà Nội cấp ngày 01/01/2021</p>
         <p class="copyright font-italic">Bản quyền thuộc Công ty TNHH HALO Việt Nam</p>
       </div>
     </footer>
