--- a/halo/cart.html
+++ b/halo/cart.html
@@ -31,7 +31,8 @@
               <li class="nav-item display-till-md log-min"><a class="nav-link py-3" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a></li>
             </ul>
           </div>
-          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i>
+              <div class="cart__badge-wrapper"><span class="cart__badge">0</span></div></a>
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
@@ -106,7 +107,7 @@
           <div class="cart__item"><a class="col--img-min display-till-md" href="details.html"> <img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
             <div class="col-group">
               <div class="col--order hidden-till-md">1 </div><a class="col--img-max hidden-till-md" href="details.html"><img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
-              <div class="col--name"> <a href="details.html">Canon EOS 1DX Mark III</a></div>
+              <div class="col--name"> <a href="details.html">Canon EOS 1DX Mark&nbsp;III</a></div>
               <div class="col--single-price"> <span class="display-till-md">Đơn giá:&nbsp; </span>100.000.000đ</div>
               <div class="col--quantity">
                 <div class="quantity__minus">-</div>
@@ -120,15 +121,15 @@
           </div>
           <div class="cart__item"><a class="col--img-min display-till-md" href="details.html"> <img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
             <div class="col-group">
-              <div class="col--order hidden-till-md">2 </div><a class="col--img-max hidden-till-md" href="details.html"><img src="img/img--cart/cart-img.jpg" alt="canon eos 1DX Mark 3"></a>
-              <div class="col--name"> <a href="details.html">Canon EOS 1DX Mark III</a></div>
-              <div class="col--single-price"> <span class="display-till-md">Đơn giá:&nbsp; </span>100.000.000đ          </div>
+              <div class="col--order hidden-till-md">2 </div><a class="col--img-max hidden-till-md" href="details.html"><img src="img/img--item/item-3-max.jpg" alt="canon eos 1DX Mark 3"></a>
+              <div class="col--name"> <a href="details.html">Sony Alpha A7 Mark&nbsp;II</a></div>
+              <div class="col--single-price"> <span class="display-till-md">Đơn giá:&nbsp; </span>23.990.000đ          </div>
               <div class="col--quantity">
                 <div class="quantity__minus">-</div>
                 <div class="quantity__number">2 </div>
                 <div class="quantity__plus">+</div>
               </div>
-              <div class="col--multiple-price"> <span class="display-till-md">Thành tiền:&nbsp; </span>200.000.000đ</div>
+              <div class="col--multiple-price"> <span class="display-till-md">Thành tiền:&nbsp; </span>47.980.000đ</div>
               <div class="col--remove display-till-md text-danger font-italic">Xóa khỏi giỏ hàng </div>
               <div class="col--remove hidden-till-md"><i class="far fa-times-circle col--remove__btn"></i></div>
             </div>
