--- a/halo/parts/layout.html
+++ b/halo/parts/layout.html
@@ -30,7 +30,8 @@
               <li class="nav-item display-till-md log-min"><a class="nav-link py-3" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a></li>
             </ul>
           </div>
-          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i>
+              <div class="cart__badge-wrapper"><span class="cart__badge">0</span></div></a>
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
