--- a/halo/review.html
+++ b/halo/review.html
@@ -31,7 +31,8 @@
               <li class="nav-item display-till-md log-min"><a class="nav-link py-3" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a></li>
             </ul>
           </div>
-          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i>
+              <div class="cart__badge-wrapper"><span class="cart__badge">0</span></div></a>
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
@@ -100,27 +101,27 @@
             <li data-target="#sub-banner-area--min" data-slide-to="2"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="3"></li>
           </ul>
-          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-sub-banner-2.jpg" alt="">
+          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-big-banner-xl-sfw.jpg" alt="">
               <div class="carousel-caption">
-                <h3>Một ngày cùng Canon 35mm f/1.4&nbsp;L</h3>
-              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-3.png" alt="">
+                <h3>Một ngày cùng Canon M5</h3>
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-1.jpg" alt="">
               <div class="carousel-caption">
-                <h3>Sigma 17-50mm&nbsp;Review </h3>
-              </div><span class="easter-egg"> </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-4.jpg" alt="">
+                <h3>Sony A6400 Review </h3>
+              </div><span class="easter-egg"> </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-2.jpg" alt="">
               <div class="carousel-caption">
                 <h3>Canon 85mm Review         </h3>
-              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-5.png" alt="">
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-3.jpg" alt="">
               <div class="carousel-caption">
-                <h3>Canon 60D Review       </h3>
+                <h3>Sigma 150-600mm f/5-6.3 Review</h3>
               </div></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
-      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><img class="display-till-xl" src="/halo/img/img--review/review-big-banner-md-v1.jpg" alt=""><img class="hidden-till-xl" src="/halo/img/img--review/review-big-banner-xl-v7.jpg" alt="">
-          <div class="sub-banner__caption"><span>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</span><br><span>Mối tình đầu với team "viền đỏ"</span></div></a>
-        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-3.png" alt="">
-            <div class="sub-banner__caption"><span>Sigma 17-50mm Review </span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-4.jpg" alt="">
-            <div class="sub-banner__caption"><span>Canon 85mm Review </span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-5.png" alt="">
-            <div class="sub-banner__caption"><span>Canon 60D Review </span></div></a></div>
+      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><img class="display-till-xl" src="/halo/img/img--review/review-big-banner-md-sfw.jpg" alt=""><img class="hidden-till-xl" src="/halo/img/img--review/review-big-banner-xl-sfw.jpg" alt="">
+          <div class="sub-banner__caption"><span>Một ngày cùng Canon M5</span></div></a>
+        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-1.jpg" alt="">
+            <div class="sub-banner__caption"><span>Sony A6400 Review</span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-2.jpg" alt="">
+            <div class="sub-banner__caption"><span>Nikon Z7 Review</span></div></a><a class="review__sub-banner--small hidden-till-xl" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-3.jpg" alt="">
+            <div class="sub-banner__caption"><span>Sigma 150-600mm f/5-6.3 Review</span></div></a></div>
       </section>
       <section class="main-area container-xl">
         <div class="review__post-area">
