--- a/halo/details.html
+++ b/halo/details.html
@@ -32,7 +32,8 @@
               <li class="nav-item display-till-md log-min"><a class="nav-link py-3" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a></li>
             </ul>
           </div>
-          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+          <div class="log-cart-search"><a class="hidden-till-md log-max" id="logregToggler" href="#" data-toggle="modal" data-target="#logreg">Đăng nhập/Đăng ký</a><a class="cart-icon" href="cart.html"><i class="fas fa-shopping-cart"></i>
+              <div class="cart__badge-wrapper"><span class="cart__badge">0</span></div></a>
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
@@ -118,7 +119,7 @@
             <p class="details__price">130.090.000đ</p>
             <p class="details__sale-text"><span class="details__old-price">138.090.000đ</span><span class="details__sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="details__sale-amount">(Giảm 8.000.000đ)</span></p>
             <div class="summary__btn-wrapper"><a class="summary__btn btn d-flex justify-content-center align-items-center" href="cart.html">Mua ngay      </a>
-              <button class="summary__btn btn">Thêm vào giỏ hàng </button>
+              <button class="summary__btn btn btn--add-to-cart">Thêm vào giỏ hàng </button>
             </div>
             <div class="summary__box-content"> 
               <h2 class="details__sub-header text-left mb-3">Hộp sản phẩm bao gồm</h2>
