--- a/halo/index.html
+++ b/halo/index.html
@@ -197,39 +197,33 @@
         <div class="container-xl px-sm-5 px-xl-0 mw-900">
           <div class="intro__text d-flex flex-column" data-aos="fade-down" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000">
             <h1>Phụ kiện máy ảnh</h1>
-            <h3 class="font-italic">Dù “pro” đến mấy cũng cần các trợ thủ đắc lực</h3>
+            <h3 class="font-italic">Dù “pro” đến mấy cũng cần các trợ thủ đắc lực</h3><a class="btn btn--dark seemore-btn mx-auto" href="camera-hub.html" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="1000">Xem chi tiết</a>
           </div>
-          <div class="intro__img display-till-md" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img src="img/img--equip/equip-intro--min.png" alt=""></div>
-          <div class="intro__img card-columns hidden-till-md" id="intro__img" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000">
-            <div class="card"><img class="card-img" src="img/img--equip/equip-1.png" alt=""></div>
-            <div class="card"><img class="card-img" src="img/img--equip/equip-5.png" alt=""></div>
-            <div class="card"><img class="card-img" src="img/img--equip/equip-3.jpg" alt=""></div>
-            <div class="card"><img class="card-img" src="img/img--equip/equip-4.png" alt=""></div>
-          </div><a class="btn btn--dark seemore-btn mx-auto" href="camera-hub.html" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="1000">Xem chi tiết</a>
+          <div class="intro__img" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><a href="camera-hub.html"> <img src="img/img--equip/equip-intro--xl.jpg" alt=""></a></div>
         </div>
       </section>
       <section class="specials dark-side">
         <div class="container-xl px-sm-5 px-xl-0 d-flex flex-column align-items-center">
           <h1>Đối tác chiến lược</h1>
-          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sony.png" alt="" data-aos="flip-left" data-aos-offset="150" data-aos-easing="ease-in-sine" data-aos-duration="700"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-nikon.png" alt="" data-aos="flip-left" data-aos-offset="150" data-aos-easing="ease-in-sine" data-aos-duration="900"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-canon.png" alt="" data-aos="flip-left" data-aos-offset="150" data-aos-easing="ease-in-sine" data-aos-duration="1100"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sigma.png" alt="" data-aos="flip-left" data-aos-offset="150" data-aos-easing="ease-in-sine" data-aos-duration="1300"></div>
+          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sony.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-nikon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-canon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sigma.png" alt=""></div>
           <div class="brands__text">
             <h3 class="font-italic text-center mw-900">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
           </div>
           <h1>Chính sách độc quyền</h1>
           <div class="policy d-flex justify-content-between">
-            <div class="policy__item border border-white d-flex flex-column justify-content-between" data-aos="fade-down" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="700">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between">
               <p class="policy__text text-center"><span class="font-weight-bold">Miễn phí </span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-truck"></i>
                 <p class="font-weight-bold">FREE</p>
               </div>
             </div>
-            <div class="policy__item border border-white d-flex flex-column justify-content-between" data-aos="fade-down" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1000">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between">
               <p class="policy__text text-center">Đổi mới sản phẩm hoặc<span class="font-weight-bold"> hoàn tiền 100% </span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-history"></i>
                 <p class="font-weight-bold">100%</p>
               </div>
             </div>
-            <div class="policy__item border border-white d-flex flex-column justify-content-between" data-aos="fade-down" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1300">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between">
               <p class="policy__text text-center">Hỗ trợ trả góp mọi sản phẩm với <span class="font-weight-bold">0% lãi suất </span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="far fa-credit-card"></i>
                 <p class="font-weight-bold">0%  </p>
@@ -241,8 +235,7 @@
       <section class="promo">
         <div class="container-xl px-sm-5 px-xl-0">
           <h1>Tin khuyến mại</h1>
-          <div class="promo__collection row"><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt="" data-aos="zoom-in" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="700"><img class="promo-item col-md-4" src="img/img--misc/promo-img-2.jpg" alt="" data-aos="zoom-in" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="700"><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt="" data-aos="zoom-in" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="700"></div>
-          <button class="btn btn--dark seemore-btn mx-auto" type="button">Xem thêm</button>
+          <div class="promo__collection row"><a class="promo-item col-sm-4" href="#"><img src="img/img--misc/promo-img-1.jpg" alt=""></a><a class="promo-item col-sm-4" href="#">  <img src="img/img--misc/promo-img-2.jpg" alt=""></a><a class="promo-item col-sm-4" href="#"><img src="img/img--misc/promo-img-1.jpg" alt=""></a></div><a class="btn btn--dark seemore-btn mx-auto" href="#">Xem thêm</a>
         </div>
       </section>
       <section class="review dark-side">
